# Ai-datei-scan-

./: .gitignore  LICENSE  README.md  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_smartfolders.py
.github/workflows/: build.yml
docs/: ANLEITUNG.md  ARCHITECTURE.md  BUILD.md  INSTALL.md  PERFORMANCE.md  SCREENSHOTS.md
smartfolders/: __init__.py  __main__.py  config.py  constants.py  engine.py
smartfolders/ai/: __init__.py  classifier.py  content.py  duplicates.py  embeddings.py  ocr.py  rename.py  search.py
smartfolders/core/: __init__.py  database.py  events.py  models.py  organizer.py  rules.py  scanner.py  watcher.py
smartfolders/system/: __init__.py  autostart.py  hardware.py  optimizer.py
smartfolders/ui/: __init__.py  app_qt.py  bridge.py  icons.py  main_window.py  onboarding.py  theme.py  tray.py  widgets.py
smartfolders/ui/views/: __init__.py  dashboard.py  duplicates_view.py  files_view.py  optimize_view.py  rules_view.py  search_view.py  settings_view.py
smartfolders/utils/: __init__.py  hashing.py  logging.py  paths.py
tests/: conftest.py  test_classifier.py  test_config_optimizer.py  test_database.py  test_duplicates.py  test_embeddings_search.py  test_engine_pipeline.py  test_rename.py  test_rules.py
