[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfolders"
version = "1.0.0"
description = "AI-powered file organization assistant for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SmartFolders" }]
keywords = ["ai", "files", "organization", "ocr", "semantic-search", "desktop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
]

dependencies = [
    "PyQt6>=6.6,<7.0",
    "watchdog>=4.0",
    "psutil>=5.9",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
ai = ["numpy>=1.26", "sentence-transformers>=2.6", "transformers>=4.40"]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17", "Pillow>=10.0"]
media = ["ImageHash>=4.3", "PyMuPDF>=1.24"]
dev = ["pytest>=8.0", "pytest-qt>=4.4", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10", "pyinstaller>=6.6"]

[project.scripts]
smartfolders = "smartfolders.__main__:main"

[project.gui-scripts]
SmartFolders = "smartfolders.__main__:main"

[tool.setuptools.packages.find]
include = ["smartfolders*"]

[tool.setuptools.package-data]
smartfolders = ["ui/assets/*.qss", "ui/assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# UP042: the (str, Enum) mixin is intentional for JSON-friendly value access
# across Python 3.11/3.12 without StrEnum's altered str() behaviour.
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
